tests/baselines/reference/parserStrictMode2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode2.ts (5 errors) ====
    "use strict";
    foo1();
    ~~~~
!!! error TS2304: Cannot find name 'foo1'.
    foo1();
    ~~~~
!!! error TS2304: Cannot find name 'foo1'.
    foo1();
    ~~~~
!!! error TS2304: Cannot find name 'foo1'.
    static();
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~
!!! error TS1109: Expression expected.